--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
     "description": "NodeJS Test App",
     "main": "app.js",
     "scripts": {
-        "dev:start": "nodemon index.js"
+        "dev:start": "nodemon"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "pg": "^8.6.0"
+        "pg": "^8.6.0",
+        "ts-node": "^10.0.0",
+        "typescript": "^3.9.10"
     },
     "devDependencies": {
+        "@types/express": "^4.17.12",
         "nodemon": "^2.0.7"
     }
 }
