--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
     "description": "NodeJS Test App",
     "main": "app.js",
     "scripts": {
-        "dev:start": "nodemon"
+        "dev:start": "nodemon",
+        "test": "jest --watch"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "dotenv": "^10.0.0",
+        "eslint-plugin-jest": "^24.3.6",
         "express": "^4.17.1",
+        "jest": "^27.0.6",
         "pg": "^8.6.0",
+        "ts-jest": "^27.0.3",
         "ts-node": "^10.0.0",
         "typescript": "^3.9.10"
     },
     "devDependencies": {
         "@types/express": "^4.17.12",
+        "@types/jest": "^26.0.23",
         "nodemon": "^2.0.7"
     }
 }
