--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "NodeJS Test App",
     "main": "app.js",
     "scripts": {
-        "dev:start": "nodemon index.js",
+        "dev:start": "nodemon",
         "lint": "eslint . --fix"
     },
     "author": "",
