--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.28.2",
         "dotenv": "^10.0.0",
         "eslint": "^7.29.0",
         "express": "^4.17.1",
         "pg": "^8.6.0"
     },
     "devDependencies": {
+        "eslint-plugin-prettier": "^3.4.0",
         "nodemon": "^2.0.7"
     }
 }
