--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "NodeJS Test App",
     "main": "app.js",
     "scripts": {
-        "dev:start": "nodemon"
+        "dev:start": "nodemon",
+        "prettier": "prettier --write \"**/*.ts\""
     },
     "author": "",
     "license": "ISC",
