--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
     "tabWidth": 2,
     "useTabs": false,
+    "semi": false,
     "trailingComma": "es5",
     "singleQuote": true,
     "printWidth": 140,
