--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "app.js",
     "scripts": {
         "dev:start": "nodemon",
-        "test": "jest --watch",
+        "test": "jest",
         "lint": "eslint . --fix",
         "prettier": "prettier --write \"**/*.ts\""
     },
@@ -22,21 +22,20 @@
         "typescript": "^4.3.5"
     },
     "devDependencies": {
+        "@jest/types": "^27.0.6",
         "@types/express": "^4.17.12",
         "@types/jest": "^26.0.23",
-        "nodemon": "^2.0.7",
-        "eslint-plugin-prettier": "^3.4.0",
-        "nodemon": "^2.0.7",
+        "@types/pg": "^8.6.0",
+        "@typescript-eslint/eslint-plugin": "^4.28.2",
+        "@typescript-eslint/parser": "^4.28.2",
         "eslint": "^7.30.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-jest": "^24.3.6",
+        "eslint-plugin-prettier": "^3.4.0",
         "jest": "^27.0.6",
+        "nodemon": "^2.0.7",
         "prettier": "^2.3.2",
-        "ts-jest": "^27.0.3",
-        "@types/jest": "^26.0.23",
-        "@types/pg": "^8.6.0",
-        "@typescript-eslint/eslint-plugin": "^4.28.2",
-        "@typescript-eslint/parser": "^4.28.2"
+        "ts-jest": "^27.0.3"
     }
 }
