--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
     "main": "app.js",
     "scripts": {
         "dev:start": "nodemon",
-        "test": "jest",
+        "test": "jest --watch",
         "lint": "eslint . --fix",
-        "prettier": "prettier --write \"**/*.ts\""
+        "pretty": "prettier --write \"**/*.ts\""
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "dotenv": "^10.0.0",
-        "eslint-plugin-jest": "^24.3.6",
         "express": "^4.17.1",
         "jest": "^27.0.6",
         "pg": "^8.6.0",
