--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
         "eslint-plugin-jest": "^24.3.6",
         "eslint-plugin-prettier": "^3.4.0",
         "jest": "^27.0.6",
+        "mocha": "^9.0.2",
+        "node-mocks-http": "^1.10.1",
         "nodemon": "^2.0.7",
         "prettier": "^2.3.2",
+        "request": "^2.88.2",
+        "supertest": "^6.1.3",
         "ts-jest": "^27.0.3"
     }
 }
