--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "app.js",
     "scripts": {
         "dev:start": "nodemon",
-        "test": "jest --watch",
+        "test": "jest",
         "lint": "eslint . --fix",
         "pretty": "prettier --write \"**/*.ts\""
     },
